# napari-allencell-segmenter

./: .gitignore  .napari.yaml.swp  =3.7.7  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  napari.yaml  old_metadata  pyproject.toml  setup.cfg  setup.py  tox.ini  workflow.xml.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test_and_deploy.yml  test_and_lint.yml
.napari/: DESCRIPTION.md  config.yml
docs/: conf.py  index.rst
napari_aicssegmentation/: __init__.py  _custom_widgets.py  _dock_widget.py  _function.py  _helper_functions.py  _style.py  _style_constants.py  _stylesheet.py  ui_manager.py
napari_aicssegmentation/_tests/: conftest.py  mocks.py  style_test.py  test_dock_widget.py  test_function.py  test_writer.py
napari_aicssegmentation/_tests/controller/: batch_processing_controller_test.py  workflow_select_controller_test.py  workflow_steps_controller_test.py
napari_aicssegmentation/_tests/core/: application_test.py  controller_test.py  layer_reader_test.py  router_test.py  state_test.py  view_manager_test.py  view_test.py  viewer_abstraction_test.py
napari_aicssegmentation/_tests/model/: segmenter_model_test.py
napari_aicssegmentation/_tests/util/: convert_test.py  lazy_test.py
napari_aicssegmentation/_tests/view/: _main_template_test.py  batch_processing_view_test.py  worfklow_select_view_test.py  workflow_select_view_test.py  workflow_steps_view_test.py
napari_aicssegmentation/_tests/widgets/: collapsible_box_test.py  file_input_test.py  warning_message_test.py  workflow_step_widget_test.py  workflow_thumbnails_test.py
napari_aicssegmentation/controller/: _interfaces.py  batch_processing_controller.py  interfaces.py  mpp_controller.py  workflow_select_controller.py  workflow_steps_controller.py
napari_aicssegmentation/core/: _interfaces.py  application.py  base_controller.py  base_view.py  controller.py  event.py  layer_reader.py  router.py  state.py  view.py  view_manager.py  viewer_abstraction.py
napari_aicssegmentation/model/: channel.py  segmenter_model.py
napari_aicssegmentation/mvc/: mpp_controller.py  mpp_interfaces.py  mpp_model.py  mpp_view.py
napari_aicssegmentation/style/: main.qss
napari_aicssegmentation/styles/: main.qss
napari_aicssegmentation/util/: convert.py  debug_utils.py  directories.py  lazy.py  run.py  ui_utils.py
napari_aicssegmentation/view/: _interfaces.py  _main_template.py  _util.py  batch_processing_view.py  interfaces.py  mpp_view.py  workflow_select_view.py  workflow_steps_view.py
napari_aicssegmentation/widgets/: batch_complete_dialog.py  collapsible_box.py  collapsible_panel.py  file_input.py  float_slider.py  form.py  function.py  warning_message.py  workflow_step.py  workflow_step_box.py  workflow_step_widget.py  workflow_thumbnails.py
napari_aicssegmentation/widgets/_tests/: collapsible_box_test.py
napari_allencell_segmenter/: __init__.py  _dock_widget.py  _style.py  napari.yaml
napari_allencell_segmenter/_tests/: conftest.py  mocks.py  style_test.py
napari_allencell_segmenter/_tests/controller/: batch_processing_controller_test.py  workflow_select_controller_test.py  workflow_steps_controller_test.py
napari_allencell_segmenter/controller/: _interfaces.py  batch_processing_controller.py  workflow_select_controller.py  workflow_steps_controller.py
napari_allencell_segmenter/core/: _interfaces.py  application.py  controller.py  layer_reader.py  router.py  state.py  view.py  view_manager.py  viewer_abstraction.py
napari_allencell_segmenter/model/: channel.py  segmenter_model.py
napari_allencell_segmenter/styles/: main.qss
napari_allencell_segmenter/util/: directories.py  ui_utils.py
napari_allencell_segmenter/view/: _main_template.py  batch_processing_view.py  workflow_select_view.py  workflow_steps_view.py
napari_allencell_segmenter/widgets/: batch_complete_dialog.py  collapsible_box.py  file_input.py  float_slider.py  form.py  param_sweep_widget.py  warning_message.py  workflow_step_widget.py  workflow_thumbnails.py
(+20 files in other folders)
